--- a/app/views/subjects/subjects.erb
+++ b/app/views/subjects/subjects.erb
@@ -3,7 +3,7 @@
 
 <% @subjects.each do |subject| %>
   <div>
-  	<a href="/subjects/<%= @subject.id %>"> <%= subject.title %> </a>
+  	<a href="/subjects/<%= subject.id %>"><%= subject.title %></a>
     
   </div>
 <% end %>
