--- a/app/views/subjects/edit_subject.erb
+++ b/app/views/subjects/edit_subject.erb
@@ -1,7 +1,7 @@
 <h2> Edit Subject </h2>
 
-<form method="post" action="/subject/<%=@subject.id%>">
+<form method="post" action="/subjects/<%=@subject.id%>">
   <input id="hidden" type="hidden" name="_method" value="PATCH">
-  <input type="text" name="title" value="<%= @subject.title %>"> #Maybe it should be subject.title
+  <input type="text" name="content" value="<%= @subject.content %>"> 
   <input type="submit" value="submit">
 </form>
