--- a/app/views/subjects/edit_subject.erb
+++ b/app/views/subjects/edit_subject.erb
@@ -1,7 +1,7 @@
-<h2> Edit Subject </h2>
+<h2> Edit <%= @subject.title %> Subject </h2>
 
 <form method="post" action="/subjects/<%=@subject.id%>">
   <input id="hidden" type="hidden" name="_method" value="PATCH">
-  <input type="text" name="content" value="<%= @subject.content %>"> 
+  <textarea id="text" name="content" value="<%= @subject.content %> rows="4" cols="100" style="overflow: hidden; word-wrap: break-word; resize: none; height: 500px; "><%= @subject.content %></textarea> 
   <input type="submit" value="submit">
 </form>
